Bug 138479 - ChangesInMargin: fix Undo of embedded deletions (in paragraph level)
Summary: ChangesInMargin: fix Undo of embedded deletions (in paragraph level)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords:
Depends on:
Blocks: tracked-changes-in-margin
  Show dependency treegraph
 
Reported: 2020-11-25 08:25 UTC by László Németh
Modified: 2020-12-12 10:26 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2020-11-25 08:25:29 UTC
Undo of embedded deletions doesn't work. For example, deleting "r" in "Lorem" results "Loem" in ChangesInMargin mode. Deleting "oe" results "Lm". Undo can undo only "Loem", but not "Lorem".
Comment 1 Commit Notification 2020-11-26 07:32:57 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/469f472fb31c4ef1a57f8ec54ba750c1332feec2

tdf#138479 tdf#137769 sw ChangesInMargin: fix Undo in paragraphs

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2020-11-26 10:32:38 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/e50dafcfc1819d28958368780e9cf51e7686f050

tdf#138479 tdf#137769 sw ChangesInMargin: fix Undo in paragraphs

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-12-08 11:29:19 UTC
Verifed in: 

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 761a672d62df1891b9f4f367a499b220ab2b33fa
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded